# AI_Assistant_Chat

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  auth.py  health.py
app/core/: config.py
app/db/: base.py  base_class.py  database.py
app/exceptions/: __init__.py  base_ex.py
app/jwt/: CREATE_KEY.md  utils.py
app/jwtauth/: utils.py
app/models/: user_models.py
app/schemas/: userschema.py
app/service/: auth_service.py
